Fix Makefile.sys: Add proper macOS detection and configuration
- Add automatic macOS platform detection using uname
- Configure clang compiler for macOS builds  
- Set appropriate library paths for Homebrew/MacPorts
- Add macOS-specific CFLAGS and system settings
- Maintain backwards compatibility with existing Linux builds

This resolves the issue where macOS builds were incorrectly using Linux 
configuration and gcc instead of the proper macOS settings with clang.

Fixes macOS compilation support issue tracked in TASK.md.

--- a/Makefile.sys
+++ b/Makefile.sys
@@ -1,4 +1,13 @@
 
+# Platform detection - check for macOS first
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Darwin)
+	# macOS detected - override TARGET if not set
+	ifeq ($(TARGET),)
+		TARGET=macos
+	endif
+endif
+
 ifeq ($(TARGET),)
 	TARGET=linux
 endif
@@ -84,6 +93,38 @@ else ifeq ($(TARGET),solaris)
 	ARCH=solaris_$(MACH)
 	CC=$(shell if test -x /opt/csw/gcc4/bin/gcc; then echo /opt/csw/gcc4/bin/gcc; else echo gcc; fi)
 	INSTALL=ginstall
+else ifeq ($(TARGET),macos)
+	# macOS configuration
+	ARCH=macos
+	OS=Darwin
+	CC=clang
+	AR=ar
+	RANLIB=ranlib
+	STRIP=strip
+	CFLAGS+=-DMACOS -D_DARWIN_C_SOURCE
+	
+	# Add macOS-specific include and library paths
+	# Homebrew paths
+	ifneq ($(wildcard /opt/homebrew/include),)
+		CFLAGS+=-I/opt/homebrew/include
+		LDFLAGS+=-L/opt/homebrew/lib
+	endif
+	ifneq ($(wildcard /usr/local/include),)
+		CFLAGS+=-I/usr/local/include
+		LDFLAGS+=-L/usr/local/lib
+	endif
+	
+	# MacPorts paths
+	ifneq ($(wildcard /opt/local/include),)
+		CFLAGS+=-I/opt/local/include
+		LDFLAGS+=-L/opt/local/lib
+	endif
+	
+	DEST_BASE=/usr/local
+	DEST_PREFIX=$(DEST_BASE)
+	DEST_BINDIR=$(DEST_PREFIX)/bin
+	DEST_INCDIR=$(DEST_PREFIX)/include
+	DEST_LIBDIR=$(DEST_PREFIX)/lib
 else
 	ARCH=linux
 	OS=Linux
@@ -332,7 +373,7 @@ $(PROG): $(_PROG_SCRIPT)
 else
 $(PROG): $(OBJS) $(DEPS)
 #	$(FULLCC) $(LDADD) -o $(PROG) $(OBJS) $(LIBS) $(ENDLIBS)
-	$(CC) $(CFLAGS) $(LDADD) -o $(PROG) $(OBJS) $(LIBS) $(ENDLIBS)
+	$(CC) $(CFLAGS) $(LDADD) $(LDFLAGS) -o $(PROG) $(OBJS) $(LIBS) $(ENDLIBS)
 endif
 
 debug: $(PROG)
