Fix lib/Makefile: Add macOS CPU detection compatibility
- Use sysctl for CPU count on macOS instead of /proc/cpuinfo
- Maintain Linux compatibility with /proc/cpuinfo fallback
- Consistent with main Makefile platform detection approach

This ensures library builds work correctly on macOS by using the appropriate
system command for detecting CPU count for parallel builds.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,11 @@
 
-MAKE_JOBS?=$(shell cat /proc/cpuinfo | grep -c ^processor)
+# Detect platform for CPU count
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),Darwin)
+	MAKE_JOBS?=$(shell sysctl -n hw.ncpu)
+else
+	MAKE_JOBS?=$(shell cat /proc/cpuinfo | grep -c ^processor)
+endif
 
 all:
 	@for d in *; do test "$$d" = "lib" && continue; echo $$d; if test -d $$d; then make -j $$MAKE_JOBS -C $$d || exit 1; fi; done
