Add battery protection features to PA agent
- Add battery_level_min property to deny reservations when battery percentage is too low
- Implement immediate battery_limit enforcement when running on battery power
- Automatically revoke all reservations if battery discharge exceeds limit during grid loss
- Add .gitignore to exclude RULES.md from repository

--- a/agents/pa/Makefile
+++ b/agents/pa/Makefile
@@ -1,4 +1,15 @@
 
-PROGNAME=$(shell basename $(shell pwd))
+NAME=$(shell basename $(shell pwd))
+
+PROGNAME=$(NAME)
+SRCS=main.c driver.c jsfuncs.c
+SCRIPTS=*.js
+CFLAGS+=-DAGENT_NAME=\"$(NAME)\"
+
+SERVICE_NAME=$(NAME)
+
+JS=yes
+MQTT=yes
+INFLUX=yes
 
 include ../../Makefile.sd
