--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,13 +1,14 @@
-# Detect platform for CPU count
+# Detect CPU count
 UNAME_S := $(shell uname -s)
 ifeq ($(UNAME_S),Darwin)
-	MAKE_JOBS?=$(shell sysctl -n hw.ncpu)
+	MAKE_JOBS ?= $(shell sysctl -n hw.ncpu)
 else
-	MAKE_JOBS?=$(shell cat /proc/cpuinfo | grep -c ^processor)
+	MAKE_JOBS ?= $(shell nproc 2>/dev/null || grep -c ^processor /proc/cpuinfo)
 endif
+export MAKE_JOBS
 
 all:
-	@for d in *; do test "$$d" = "lib" && continue; echo $$d; if test -d $$d; then make -j $$MAKE_JOBS -C $$d || exit 1; fi; done
+	@for d in *; do test "$$d" = "lib" && continue; echo $$d; if test -d $$d; then make -j $(MAKE_JOBS) -C $$d || exit 1; fi; done
 
 install release clean cleanall::
 	for d in *; do if test -d $$d; then make -C $$d $@; fi; done
