Remove rheem agent and cleanup temp files
- Remove rheem agent (Makefile, driver.c, main.c, jsfuncs.c, read/write/pub.js)
- Update AC agent: charge, cycle, fan, mode, run, unit, utils improvements
- Update PA agent: funcs, init, read, utils enhancements
- Update core libraries: bt.c, influx.c, jsglobal.c, jsconfig.h
- Update Makefile.sd and Makefile.sys build configurations
- Add README.md files for AC and PA agents
- Add start.js for AC agent
- Remove temp files: PLANNING.md, TASK.md, log files, test artifacts
- Clean up reports directory binaries and test files
- Remove clients/Makefile and miscellaneous temp scripts

--- a/Makefile.sd
+++ b/Makefile.sd
@@ -4,11 +4,13 @@ ID:=$(shell id -u)
 # We use pthreads in a lot of things
 PTHREADS=yes
 
-ifeq ($(ID),0)
 PREFIX?=/opt/sd
-else
-PREFIX?=$(shell echo ~)
-endif
+
+#ifeq ($(ID),0)
+#PREFIX?=/opt/sd
+#else
+#PREFIX?=$(shell echo ~)
+#endif
 
 # Define SRC_ROOT
 current_makefile := $(lastword $(MAKEFILE_LIST))
